--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ main{
 
 h1{
     align-self: self-start;
-    font-size: 2.5em;
+    font-size: 3em;
     font-weight: bold;
     color: #222;
     margin-top: 0.25rem;
@@ -41,7 +41,7 @@ h1{
     background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.3));
 }
 
-dialog{
+dialog {
     box-sizing: border-box;
     width: 100%;
     max-width: 525px;
@@ -123,7 +123,6 @@ dialog .controls button{
 .tooltip-container .tooltip-text::after {
     content: "";
     position: absolute;
-    top: 100%; /* Flechita apuntando hacia el botón */
     left: 50%;
     transform: translateX(-50%);
     border-width: 5px;
@@ -138,9 +137,9 @@ dialog .controls button{
 .container {
     width: 200px;
     height: 200px;
-    margin: 0 auto;
-    position: relative;
-    perspective: 600px;
+    margin: auto auto;
+    position: absolute;
+    perspective: 800px;
     top: -50px;
 }
 
@@ -149,6 +148,7 @@ dialog .controls button{
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
+    margin-top: 4.5em;
 }
 
 .cube-face {
@@ -160,7 +160,6 @@ dialog .controls button{
     align-items: center;
     font-size: 30px;
     background: white;
-
     border: black 1px solid;
     border-radius: 5%;
 }
@@ -308,3 +307,55 @@ dialog .controls button{
     grid-row: 3;
     grid-column: 1;
 }
+
+.table-styled{
+    overflow: hidden;
+    border: 3px solid #fff;
+    background-color: #fff;
+    align-self: start; 
+    justify-self: start;
+    margin-top: 8.9em;
+    margin-left: 8em;
+    text-align: left;
+}
+
+.table-players{
+    overflow: hidden;
+    position: absolute;
+    border: 3px solid #fff;
+    background-color: #fff;
+    justify-self: end;
+    margin-top: 4em;
+    margin-right: 8em;
+    text-align: center;
+    top: 5em;
+}
+
+.table-history{
+    overflow: hidden;
+    position: absolute;
+    border: 3px solid #fff;
+    background-color: #fff;
+    justify-self: end;
+    margin-top: 15em;
+    margin-right: 5.25em;
+    text-align: center;
+    top: 5em;
+}
+
+.table-styled table, .table-players table, .table-history table{
+    border: 2px solid #333;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td{
+	padding: 20px;
+}
+
+
+tr:hover td{
+	background-color: #369681;
+	color: white;
+}
+
