--- a/style.css
+++ b/style.css
@@ -490,11 +490,11 @@ button:hover::before {
     z-index: -1;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, red, blue, deeppink, blue, red, blue, deeppink, blue);
+    background: linear-gradient(45deg, darkslategray, darkred, darkorange, darkred, darkslategray, darkred, darkorange);
     background-size: 800%;
     border-radius: 12px;
-    filter: blur(8px);
-    animation: glowing 20s linear infinite;
+    filter: blur(5px) contrast(100%) brightness(80%);
+    animation: glowing 10s linear infinite;
 }
 
 @keyframes glowing {
